--- a/test-task/src/App.scss
+++ b/test-task/src/App.scss
@@ -29,6 +29,29 @@
     }
   }
 
+  .app-filters{
+    margin: 20px 0px;
+    min-height: 100px;
+    &__title{
+      margin-bottom: 10px;
+    }
+    &__tag{
+      justify-content: flex-start;
+      &-item{
+      margin: 5px;
+      padding: 7px 14px;
+      border: 1px solid #000000;
+      border-radius: 15px;
+      cursor: pointer;
+        &--active{
+          font-weight: 600;
+          color: #135e94;
+          border-color: #1815ce;
+        }
+      }
+    }
+  }
+
   .app-notes{
     margin: 20px;
     gap: 20px;
