--- a/test-task/src/components/Note/style.scss
+++ b/test-task/src/components/Note/style.scss
@@ -53,6 +53,9 @@
          &--show:hover{
             background-color: rgb(177, 248, 177);
          }
+         &--show:active{
+            background-color: rgb(77, 253, 77);
+         }
          &--edit:hover{
             background-color: rgb(248, 229, 177);
          }
