--- a/test-task/src/components/Note/style.scss
+++ b/test-task/src/components/Note/style.scss
@@ -59,6 +59,9 @@
          &--edit:hover{
             background-color: rgb(248, 229, 177);
          }
+         &--edit:active{
+            background-color: rgb(248, 201, 72);
+         }
          &--delete:hover{
             background-color: rgb(248, 177, 177);
          }
